--- a/a-frame-logo-animation.html
+++ b/a-frame-logo-animation.html
@@ -27,6 +27,32 @@
             </a-entity>
           </a-box>
         </a-entity>
+        <a-entity
+              animation="property: object3D.scale.y; from: 0.0001; to: 1; delay: 800; dur: 800; easing: easeOutCubic"
+              rotation="-90 0 0" position="0 8 7.5" scale="1 0.0001 1">
+              <a-box width="12.45" depth=".1" height="14" color="#F2E646" position="0 7 .52" shader="flat"></a-box>
+              <a-box width="12.5" depth="1" height="14" color="#EF2D5E" position="0 7 0"></a-box>
+            </a-entity>
+          
+    <a-entity rotation="-90 0 0"> 
+      <a-plane animation="property:object3D.scale.y; from:0.0001; to:1; delay: 600; dur:1000; easig:easeoutCubic" width="20.5" height="30" positio="0 0 0.1" color="#21897C" scale="1 0.0001 1"></a-plane>
+    </a-entity> 
+    <a-entity> 
+      <a-box animation="property:object3D.position.z; to:340; dur:8500; loop:true" position="-280 240 180" color="white" opacity="0.25" width="18" depth="9" height="6">
+
+      </a-box>
+      <a-box animation="property:object3D.position.z; to:340; dur:8500; loop:true" position="5 32 -80" color="white" opacity="0.20" width="18" depth="7" height="6">
+
+      </a-box>
+      <a-box animation="property:object3D.position.z; to:340; dur:8500; loop:true" position="-20 18 -50" color="white" opacity="0.85" width="18" depth="7" height="6">
+
+      </a-box>
+      <a-box animation="property:object3D.position.z; to:340; dur:8500; loop:true" position="-20 18 -50" color="white" opacity="0.85" width="18" depth="7" height="6">
+
+      </a-box>
+    </a-entity>
+    <a-light type="directional" color="FFF" intensity="0.45" position="4 2 1"></a-light>
+    <a-light type="ambient" color="#A8A8A8"></a-light>
   </a-scene>
 </body>
 
